gaspar/gaspar-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gaspar
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: gaspar
  template:
    metadata:
      labels:
        app: gaspar
    spec:
      containers:
      - image: ghcr.io/elanis/gaspar:3.4.5
        name: gaspar
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 25m
            memory: 250Mi
          limits:
            cpu: 500m
            memory: 500Mi
      imagePullSecrets:
      - name: github
