gaspar/gaspar-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gaspar-ingressroute

spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`gaspar.ovh`) || Host(`www.gaspar.ovh`)
    kind: Rule
    services:
    - name: gaspar-svc
      port: 80
    middlewares:
      - name: security
  tls:
    secretName: gaspar-tls-secret
